syntax = "proto3";

package studyroom.room.v1;

// 스터디룸 상태 (ENUM)
enum RoomStatus {
  ROOM_STATUS_UNSPECIFIED = 0; // 지정되지 않음
  ROOM_STATUS_VACANT = 1;      // 공실
  ROOM_STATUS_OCCUPIED = 2;    // 입실
}

// 스터디룸 메시지 구조
message Room {
  int64 id = 1;                 // 스터디룸 ID
  int64 department_id = 2;      // 학과 ID (외부 서비스 참조)
  string name = 3;              // 스터디룸 이름
  int32 minimum_member = 4;     // 최소 인원
  RoomStatus status = 5;        // 스터디룸 상태
  string created_at = 6;        // 생성 시각 (ISO 8601 문자열) - 외부에서 전달하는 것이 아닌 백엔드에서 직접 로직을 수행할 때 기록하기
  string updated_at = 7;        // 수정 시각 (ISO 8601 문자열)
}

// 스터디룸 생성 요청
message CreateRoomRequest {
  int64 department_id = 1;
  string name = 2;
  int32 minimum_member = 3;
  RoomStatus status = 4;
}

// 특정 스터디룸 조회 요청
message GetRoomRequest {
  int64 id = 1;
}

// 스터디룸 목록 조회 요청
message ListRoomsRequest {
  // 필터링 옵션 (예: 학과 ID, 상태 등)
  // 현재는 모든 방을 조회하지만, 향후 필터링 파라미터를 추가할 수 있습니다.
}

// 스터디룸 생성 응답
message CreateRoomResponse {
  Room room = 1;
}

// 특정 스터디룸 조회 응답
message GetRoomResponse {
  Room room = 1;
}

// 스터디룸 목록 응답
message ListRoomsResponse {
  repeated Room rooms = 1;
}

// 스터디룸 업데이트 응답
message UpdateRoomResponse {
  Room room = 1;
}

// 스터디룸 삭제 응답
message DeleteRoomResponse {}

// 스터디룸 정보 업데이트 요청
message UpdateRoomRequest {
  int64 id = 1;
  int64 department_id = 2;
  string name = 3;
  int32 minimum_member = 4;
  RoomStatus status = 5;
}

// 스터디룸 삭제 요청
message DeleteRoomRequest {
  int64 id = 1;
}
