syntax = "proto3";

package studyroom.room_exception.v1;

import "room_exception/room_exception.proto";

// RoomException 서비스 정의
service RoomExceptionService {
  // 스터디룸 예외 생성
  rpc CreateRoomException (CreateRoomExceptionRequest) returns (CreateRoomExceptionResponse);
  // 특정 스터디룸 예외 조회
  rpc GetRoomException (GetRoomExceptionRequest) returns (GetRoomExceptionResponse);
  // 스터디룸 예외 목록 조회
  rpc ListRoomExceptions (ListRoomExceptionsRequest) returns (ListRoomExceptionsResponse);
  // 스터디룸 예외 정보 업데이트
  rpc UpdateRoomException (UpdateRoomExceptionRequest) returns (UpdateRoomExceptionResponse);
  // 스터디룸 예외 삭제 (소프트 삭제)
  rpc DeleteRoomException (DeleteRoomExceptionRequest) returns (DeleteRoomExceptionResponse);
}
