syntax = "proto3";

package bannote.studyroomservice.roomoperatinghour.v1;

import "google/protobuf/timestamp.proto";

// 스터디룸 운영 시간 메시지 구조
message RoomOperatingHour {
  int64 id = 1;                               // 운영 시간 ID
  int64 room_id = 2;                          // 스터디룸 ID
  int32 day_of_week = 3;                      // 요일 (0:일요일 ~ 6:토요일)
  string opening_time = 4;                    // 여는 시간 (HH:MM)
  string closing_time = 5;                    // 닫는 시간 (HH:MM)
  string day_maximum_time = 6;                // 하루 최대 예약 가능 시간 (HH:MM)
  google.protobuf.Timestamp created_at = 7;   // 생성 시각
  google.protobuf.Timestamp updated_at = 8;   // 수정 시각
  google.protobuf.Timestamp deleted_at = 9;   // 삭제 시각 (소프트 삭제)
}

// 생성 요청 / 응답
message CreateRoomOperatingHourRequest {
  int64 room_id = 1;
  int32 day_of_week = 2;
  string opening_time = 3;
  string closing_time = 4;
  string day_maximum_time = 5;
}

message CreateRoomOperatingHourResponse {
  RoomOperatingHour room_operating_hour = 1;
}

// 단건 조회 요청 / 응답
message GetRoomOperatingHourRequest {
  int64 id = 1;
}

message GetRoomOperatingHourResponse {
  RoomOperatingHour room_operating_hour = 1;
}

// 목록 조회 요청 / 응답
message ListRoomOperatingHoursRequest {
  int64 room_id = 1;        // 스터디룸 ID 필터
  int32 day_of_week = 2;    // 요일 필터
}

message ListRoomOperatingHoursResponse {
  repeated RoomOperatingHour room_operating_hours = 1;
}

// 수정 요청 / 응답
message UpdateRoomOperatingHourRequest {
  int64 id = 1;
  int64 room_id = 2;
  int32 day_of_week = 3;
  string opening_time = 4;
  string closing_time = 5;
  string day_maximum_time = 6;
}

message UpdateRoomOperatingHourResponse {
  RoomOperatingHour room_operating_hour = 1;
}

// 삭제 요청 / 응답
message DeleteRoomOperatingHourRequest {
  int64 id = 1;
}

message DeleteRoomOperatingHourResponse {
  bool success = 1;
  string message = 2;
}
